--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,142 @@
+@import 'variables';
 
+*,*::before,*::after{
+    box-sizing: border-box;
+    margin: 0;
+    border: 0;
+}
+body{
+    background-image: $BackgroundRadialGradient;
+    background-repeat: no-repeat;
+    text-align: center;
+    font-size:16px;
+    height:100vh;
+    width:100vw;
+
+ #main-con{
+        margin: 0 auto;
+        width: 700px;
+        max-width: 100%;
+        position: relative;
+    // header styles
+    header{
+        border:2px solid $HeaderOutline;
+            border-radius: 15px;
+            padding:30px;
+            margin-bottom: 50px;
+           
+        .header-con{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            text-transform: uppercase;
+
+            .header-text{
+                color:white;
+                font-size: 2rem;
+                display: flex;
+                flex-direction: column;
+                text-align: left;
+            }
+            .score-con{
+                    background-color: white;
+                    width:180px;
+                    max-width: 100%;
+                    padding:20px;
+                    border-radius: 10px;
+
+                    .score-text{
+                        color:$ScoreText;
+                        font-size:1.2rem;
+                    }
+                    .score-value{
+                        font-size: 4rem;
+                        color:$DarkText;
+                    }
+
+            }
+        }
+    }
+    // the .option styles is outside its parent styles so as to be able 
+    // to reuse in the result con as well
+    .option{
+                border-radius: 50%;
+                width:150px;
+                height: 150px;
+                margin: 25px;
+                
+                
+                span{
+                   background-color: white;
+                   display: inline-block;
+                   border-radius: inherit;
+                   width:110px;
+                   height:110px;
+                   padding:30px;
+                
+                }
+                
+                
+               
+            }
+              #papper-con{
+                    background-image: $PaperGradient;
+                }
+                #scissors-con{
+                    background-image: $ScissorsGradient;
+                }
+                #rock-con{
+                    background-image: $RockGradient;
+                }
+        #game-con{
+            display: flex;
+            width:500px;
+            max-width: 100%;
+            justify-content: center;
+            flex-wrap: wrap;
+            align-items: center;
+            height:400px;
+            button{
+                cursor: pointer;
+            }
+          
+            
+            
+        }
+    #result-con{
+        div{
+            display: flex;
+            justify-content: space-between;
+            width:500px;
+            max-width: 100%;
+            align-items: center;
+
+            p{
+                text-transform: uppercase;
+                color: white;
+                font-size: 1.3rem;
+            }
+        #result{
+            
+        }
+        }
+        
+    }
+        #rules-con{ 
+                width:100px;
+                height:30px;
+                background-color: transparent;
+                color:white;
+                border-radius: 4px;
+                text-transform: uppercase;
+                position:fixed;
+                border:1px solid white;
+                right:40px;
+                cursor: pointer;            
+        }
+
+    }
+
+}
 
 /*# sourceMappingURL=styles.scss.map */
