--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body #main-con header {
   border-radius: 15px;
   padding: 30px;
   margin-bottom: 50px;
+  margin-top: 10px;
 }
 
 body #main-con header .header-con {
@@ -55,15 +56,15 @@ body #main-con header .header-con .score-con .score-text {
   font-size: 1.2rem;
 }
 
-body #main-con header .header-con .score-con .score-value {
+body #main-con header .header-con .score-con #score-value {
   font-size: 4rem;
   color: #3b4363;
 }
 
 body #main-con .option {
   border-radius: 50%;
-  width: 150px;
-  height: 150px;
+  width: 180px;
+  height: 180px;
   margin: 25px;
 }
 
@@ -71,8 +72,8 @@ body #main-con .option span {
   background-color: white;
   display: inline-block;
   border-radius: inherit;
-  width: 110px;
-  height: 110px;
+  width: 130px;
+  height: 130px;
   padding: 30px;
 }
 
@@ -102,21 +103,73 @@ body #main-con #game-con button {
   cursor: pointer;
 }
 
-body #main-con #result-con div {
+body #main-con #result-con {
+  display: none;
+}
+
+body #main-con #result-con #choice-con {
   display: flex;
   justify-content: space-between;
-  width: 500px;
-  max-width: 100%;
   align-items: center;
 }
 
-body #main-con #result-con div p {
+body #main-con #result-con p {
   text-transform: uppercase;
   color: white;
   font-size: 1.3rem;
 }
 
-body #main-con #rules-con {
+body #main-con #result-con #result {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+body #main-con #result-con #result .show-winner {
+  display: flex;
+  flex-direction: column;
+}
+
+body #main-con #result-con #result .show-winner h1 {
+  color: white;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+}
+
+body #main-con #result-con #result .show-winner button {
+  width: 150px;
+  height: 35px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+body #main-con .rules-con {
+  position: fixed;
+  background-color: #f5f3f3;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+body #main-con .rules-con div:first-child {
+  margin-bottom: 50px;
+}
+
+body #main-con .rules-con #close-btn {
+  cursor: pointer;
+}
+
+body #main-con .show-rules {
+  display: flex;
+}
+
+body #main-con #rules-btn {
   width: 100px;
   height: 30px;
   background-color: transparent;
@@ -127,5 +180,189 @@ body #main-con #rules-con {
   border: 1px solid white;
   right: 40px;
   cursor: pointer;
+  bottom: 80px;
+}
+
+body #main-con .attribution {
+  position: fixed;
+  bottom: 20px;
+  color: white;
+  font-size: 1rem;
+}
+
+@media screen and (max-width: 780px) {
+  body {
+    height: 100vh;
+    width: 100vw;
+  }
+  body #main-con {
+    width: 600px;
+  }
+  body #main-con .option {
+    width: 150px;
+    height: 150px;
+  }
+  body #main-con .option span {
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+  }
+  body #main-con #game-con {
+    display: flex;
+    width: 500px;
+    max-width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 400px;
+  }
+  body #main-con #result-con p {
+    text-transform: uppercase;
+    color: white;
+    font-size: 1.3rem;
+  }
+  body #main-con #result-con #result .show-winner h1 {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  body {
+    height: 100vh;
+    width: 100vw;
+  }
+  body #main-con {
+    width: 540px;
+  }
+  body #main-con .option {
+    width: 150px;
+    height: 150px;
+  }
+  body #main-con .option span {
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+  }
+  body #main-con #game-con {
+    display: flex;
+    width: 500px;
+    max-width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 400px;
+  }
+  body #main-con #result-con p {
+    text-transform: uppercase;
+    color: white;
+    font-size: 1rem;
+  }
+  body #main-con #result-con #result .show-winner h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  body {
+    height: 100vh;
+    width: 100vw;
+  }
+  body #main-con {
+    width: 500px;
+  }
+  body #main-con .option {
+    width: 130px;
+    height: 130px;
+  }
+  body #main-con .option span {
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+  }
+  body #main-con #game-con {
+    display: flex;
+    width: 500px;
+    max-width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 400px;
+  }
+  body #main-con #result-con p {
+    text-transform: uppercase;
+    color: white;
+    font-size: 1rem;
+  }
+  body #main-con #result-con #result .show-winner h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  body {
+    font-size: 14px;
+    overflow-x: hidden;
+  }
+  body #main-con {
+    width: 400px;
+  }
+  body #main-con header {
+    width: 400px;
+  }
+  body #main-con header .header-con .header-text {
+    font-size: 1.8rem;
+  }
+  body #main-con header .header-con .score-con {
+    width: 150px;
+  }
+  body #main-con header .header-con .score-con .score-text {
+    font-size: 1rem;
+  }
+  body #main-con header .header-con .score-con #score-value {
+    font-size: 3rem;
+    color: #3b4363;
+  }
+  body #main-con .option {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    margin: 15px;
+  }
+  body #main-con .option span {
+    background-color: white;
+    display: inline-block;
+    border-radius: inherit;
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+  }
+  body #main-con #game-con {
+    display: flex;
+    width: 400px;
+    max-width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 400px;
+  }
+  body #main-con #game-con button {
+    cursor: pointer;
+  }
+  body #main-con #result-con #choice-con {
+    justify-content: space-around;
+  }
+  body #main-con #result-con #result {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  body #main-con #result-con #result .show-winner {
+    order: 1;
+  }
+  body #main-con #rules-btn {
+    bottom: 50px;
+  }
+  body #main-con .attribution {
+    left: 20px;
+    font-size: 0.8rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
