--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -24,6 +24,7 @@ body{
             border-radius: 15px;
             padding:30px;
             margin-bottom: 50px;
+            margin-top: 10px;
            
         .header-con{
             display: flex;
@@ -49,7 +50,7 @@ body{
                         color:$ScoreText;
                         font-size:1.2rem;
                     }
-                    .score-value{
+                    #score-value{
                         font-size: 4rem;
                         color:$DarkText;
                     }
@@ -61,8 +62,8 @@ body{
     // to reuse in the result con as well
     .option{
                 border-radius: 50%;
-                width:150px;
-                height: 150px;
+                width:180px;
+                height: 180px;
                 margin: 25px;
                 
                 
@@ -70,8 +71,8 @@ body{
                    background-color: white;
                    display: inline-block;
                    border-radius: inherit;
-                   width:110px;
-                   height:110px;
+                   width:130px;
+                   height:130px;
                    padding:30px;
                 
                 }
@@ -104,25 +105,70 @@ body{
             
         }
     #result-con{
-        div{
+        display: none;
+        #choice-con{
             display: flex;
             justify-content: space-between;
-            width:500px;
-            max-width: 100%;
             align-items: center;
+        }
 
             p{
                 text-transform: uppercase;
                 color: white;
                 font-size: 1.3rem;
             }
-        #result{
+            #result{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                .show-winner{
+                display: flex;
+                flex-direction: column;
+
+                h1{
+                    color: white;
+                    font-size: 2.5rem;
+                   text-transform: uppercase; 
+                }
+                
+                   button{
+                    width:150px;
+                    height:35px;
+                    border-radius: 4px;
+                text-transform: uppercase;
+                cursor: pointer;            
+               
+
+                }
+            }
             
-        }
+
         }
         
     }
-        #rules-con{ 
+    .rules-con{
+        position: fixed;
+        background-color: rgb(245, 243, 243);
+        width:100vw;
+        height:100vh;
+        top:0;
+        left:0;
+   display: none;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   div:first-child{
+        margin-bottom: 50px;
+   }
+   #close-btn{
+        cursor: pointer;
+       
+   }
+    }
+    .show-rules{
+        display: flex;
+    }
+        #rules-btn{ 
                 width:100px;
                 height:30px;
                 background-color: transparent;
@@ -132,11 +178,18 @@ body{
                 position:fixed;
                 border:1px solid white;
                 right:40px;
-                cursor: pointer;            
+                cursor: pointer;
+                bottom:80px;            
         }
-
+        .attribution{
+                position: fixed;
+                bottom: 20px;
+                color: white;
+                font-size: 1rem;
+        }
     }
 
 }
-
+@import 'mediaqueries';
+@import "mobile"
 /*# sourceMappingURL=styles.scss.map */
