--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -8,13 +8,14 @@
     header{
             // margin-bottom: 10px;
             width:400px;
+            max-width: 100%;
             // margin-left: 10px;
             .header-con{
             .header-text{
-                font-size: 1.8rem;
+                font-size: 1.5rem;
             }
             .score-con{
-                    width:150px;
+                    width:120px;
                     .score-text{
                         font-size:1rem;
                     }
@@ -30,8 +31,8 @@
     // to reuse in the result con as well
     .option{
                 border-radius: 50%;
-                width:150px;
-                height: 150px;
+                width:120px;
+                height: 120px;
                 margin: 15px;
                 
                 
@@ -39,8 +40,8 @@
                    background-color: white;
                    display: inline-block;
                    border-radius: inherit;
-                   width:100px;
-                   height:100px;
+                   width:80px;
+                   height:80px;
                    padding:20px;
                 }         
                
@@ -76,7 +77,7 @@
         }
              .attribution{
                 left:20px; 
-                font-size: 0.8rem;              
+                font-size: 0.7rem;              
         }
     }
       
