--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,7 @@ body #main-con .attribution {
 @media screen and (max-width: 520px) {
   body {
     font-size: 14px;
-    overflow-x: hidden;
+    overflow: hidden;
   }
   body #main-con {
     width: 400px;
@@ -324,7 +324,7 @@ body #main-con .attribution {
     border-radius: 50%;
     width: 120px;
     height: 120px;
-    margin: 15px;
+    margin: 5px;
   }
   body #main-con .option span {
     background-color: white;
@@ -332,7 +332,7 @@ body #main-con .attribution {
     border-radius: inherit;
     width: 80px;
     height: 80px;
-    padding: 20px;
+    padding: 5px;
   }
   body #main-con #game-con {
     display: flex;
