--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width:520px) {
   body{
     font-size:14px;
-    overflow-x: hidden;
+    overflow: hidden;
     #main-con{
         width: 400px;
     // header styles
@@ -33,7 +33,7 @@
                 border-radius: 50%;
                 width:120px;
                 height: 120px;
-                margin: 15px;
+                margin: 5px;
                 
                 
                 span{
@@ -42,7 +42,7 @@
                    border-radius: inherit;
                    width:80px;
                    height:80px;
-                   padding:20px;
+                   padding:5px;
                 }         
                
             }
