--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -6,10 +6,9 @@
         width: 400px;
     // header styles
     header{
-            // margin-bottom: 10px;
+            margin-bottom: 10px;
             width:400px;
             max-width: 100%;
-            // margin-left: 10px;
             .header-con{
             .header-text{
                 font-size: 1.5rem;
@@ -42,7 +41,7 @@
                    border-radius: inherit;
                    width:80px;
                    height:80px;
-                   padding:5px;
+                   padding:10px;
                 }         
                
             }
@@ -53,7 +52,7 @@
             justify-content: center;
             flex-wrap: wrap;
             align-items: center;
-            height:400px;
+            height:350px;
             button{
                 cursor: pointer;
             }   
@@ -61,19 +60,25 @@
     #result-con{
            #choice-con{
                justify-content: space-around;
+               margin-bottom: 20px;
            }
             #result{
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
                 justify-content: center;
+               .option{
+                   margin-bottom: 20px;
+               }
+
                 .show-winner{
                     order:1;  
             }
         }
     }   
     #rules-btn{ 
-                bottom:50px;            
+                bottom:50px;   
+                     
         }
              .attribution{
                 left:20px; 
